--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
+    "rehype-pretty-code": "^0.14.0",
     "remark-gfm": "^4.0.0",
     "remark-unwrap-images": "^4.0.0"
   },
