--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18",
     "rehype-pretty-code": "^0.14.0",
     "remark-gfm": "^4.0.0",
-    "remark-unwrap-images": "^4.0.0"
+    "remark-unwrap-images": "^4.0.0",
+    "shiki": "^1.16.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.14",
