--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "contentlayer": "^0.3.4",
     "date-fns": "^3.6.0",
+    "geist": "^1.3.1",
     "kbar": "0.1.0-beta.45",
     "next": "14.2.5",
     "next-contentlayer": "^0.3.4",
