--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate --schema ./app/db/schema.ts --out=./app/db/migrations"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.9.5",
+    "@tanstack/react-query": "^5.59.0",
+    "axios": "^1.7.7",
     "contentlayer": "^0.3.4",
     "date-fns": "^3.6.0",
+    "drizzle-orm": "^0.33.0",
     "geist": "^1.3.1",
     "kbar": "0.1.0-beta.45",
     "next": "14.2.5",
@@ -24,10 +29,12 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.14",
+    "@tanstack/eslint-plugin-query": "^5.59.1",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.24.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
