--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.9.5",
     "@tanstack/react-query": "^5.59.0",
+    "@upstash/ratelimit": "^2.0.3",
+    "@upstash/redis": "^1.34.2",
     "axios": "^1.7.7",
     "contentlayer": "^0.3.4",
     "date-fns": "^3.6.0",
